Remove image manipulation code and only generate thumbnails on request

--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "async": "0.6.2",
-    "aws-sdk": "2.0.0-rc13",
+    "aws-sdk": "*",
     "express": "3.5.1",
-    "formidable": "1.0.14",
     "gm": "1.14.2",
-    "mime": "1.2.11",
+    "strong-cluster-control": "^2.2.3",
     "underscore": "1.6.0"
   }
 }
